# ltiauthenticator

./: .bumpversion.cfg  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  Untitled.ipynb  _version.py  dev-requirements.txt  pyproject.toml  pyproject.yaml  requirements.txt  setup.py
.github/: dependabot.yaml  dependabot.yml  publish.yaml
.github/workflows/: publish.yaml  test-docs.yaml  test-package.yaml  test.yaml
dev/: Dockerfile.jupyterhub  README.md  devkit-lti1p3.yaml  docker-compose.yml  jupyterhub_config.py
docs/: Makefile  README.md  make.bat  requirements.txt
docs/source/: conf.py  index.md
docs/source/explanation/: index.md
docs/source/how-to/: index.md
docs/source/lti11/: getting-started.md  index.md  lms-integration.md  reference.md
docs/source/lti13/: getting-started.md  index.md  lms-integration.md  reference.md
docs/source/reference/: index.md
docs/source/tutorials/: index.md
examples/: README.md  jupyterhub_config_lti11.py  jupyterhub_config_lti13.py
ltiauthenticator/: __init__.py  _version.py  auth.py  utils.py  validator.py
ltiauthenticator/lti11/: auth.py  constants.py  handlers.py  templates.py  validator.py
ltiauthenticator/lti13/: auth.py  authenticator.py  constants.py  error.py  handlers.py  utils.py  validator.py
ltiauthenticator/tests/: conftest.py  mocking.py  test_lti11_authenticator.py  test_lti11_handlers.py  test_lti13_authenticator.py  test_lti13_config_handler.py  test_lti13_handlers.py  test_lti13_jwks_handler.py  test_lti13_validator.py  test_utils.py
tests/: conftest.py  mocking.py  test_lti.py  test_lti11_authenticator.py  test_lti11_handlers.py  test_lti11_validator.py  test_lti13_authenticator copy.py  test_lti13_authenticator.py  test_lti13_config_handler.py  test_lti13_handlers.py  test_lti13_jwks_handler.py  test_lti13_validator.py  test_utils.py
tests/lti11/: conftest.py  mocking.py  test_lti11_authenticator.py  test_lti11_handlers.py  test_lti11_validator.py
tests/lti13/: conftest.py  mocking.py  stash_of_unused_fixtures.py  test_lti13_authenticator.py  test_lti13_handlers.py  test_lti13_validator.py
